# debug-drf-pytest-sample-app

./: .coveragerc  .env.sample  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
mysite/: settings.py
polls/: serializers.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/tests/: test_api.py
